src/objects/Maize_Cluster_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Maize Cluster Meetings</relationshipLabel>
        <relationshipName>Maize_Cluster_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>Maize Farmer</label>
        <referenceTo>Maize_Farmer__c</referenceTo>
        <relationshipLabel>Maize Cluster Meetings (Maize Farmer)</relationshipLabel>
        <relationshipName>Maize_Cluster_Meetings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GPS__c</fullName>
        <label>GPS</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Maize_Farmer__c</fullName>
        <label>Maize Farmer</label>
        <referenceTo>Maize_Farmer__c</referenceTo>
        <relationshipLabel>Maize Cluster Meetings</relationshipLabel>
        <relationshipName>Maize_Cluster_Meetings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>Maize Cluster Meetings</relationshipLabel>
        <relationshipName>Maize_Cluster_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Was_market_information_provided_today__c</fullName>
        <label>Was market information provided today?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_weather_information_provided_today__c</fullName>
        <label>Was weather information provided today?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_GAPs_were_discussed_at_the_meeting__c</fullName>
        <label>What GAPs were discussed at the meeting</label>
        <picklist>
            <picklistValues>
                <fullName>GAP 1: Proper and timely land prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 2: Proper planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 3: Proper seed selection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 4: Proper soil fertility management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 5: Pest and disease identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 6: Harvesting and post-harvest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 7: Bulking marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 8: Proper record keeping</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Maize Cluster Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MCM{000000}</displayFormat>
        <label>Maize Cluster Meeting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maize Cluster Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>